# TFG-Metaheuristicas-IHTP

./: .gitignore  README.md
Codificación A - Pacientes/: CMakeLists.txt  main.cc
Codificación A - Pacientes/src/: Functions.cc  MetaHeuristicSolver.cc  MetaHeuristicSolver.h  ProblemInstance.h
Codificación A - Pacientes/validator/: IHTP_Validator
Codificación B - Pacientes y enfermeros/: CMakeLists.txt  main.cc
Codificación B - Pacientes y enfermeros/src/: Functions.cc  Functions.h  MetaHeuristicSolver.cc  MetaHeuristicSolver.h  ProblemInstance.cc  ProblemInstance.h  Solver.cc  Solver.h  Structs.h
Codificación B - Pacientes y enfermeros/validator/: IHTP_Validator
RandomSearch/: CMakeLists.txt  main.cc
RandomSearch/src/: Functions.h  ProblemInstance.cc  RandomSolver.cc  RandomSolver.h  Solver.cc  Solver.h  Structs.h
